# model-diagnostics

./: .flake8  .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  properdocs.yml  pyproject.toml  sitemap.xml  untitled.ipynb  zensical.toml
.github/workflows/: docs.yml  scorecard.yml  test.yml  test_matrix.yml  test_scheduled.yml
dev_tools/: print_package_versions.py
development/: index.html
docs/: development.md  gen_ref_pages.py  index.md
docs/api-reference/: calibration.md  index.md  model_diagnostics.md  scoring.md  xai.md
docs/examples/: classification.ipynb  classification.md  index.md  quantile_regression.ipynb  quantile_regression.md  regression_on_workers_compensation.ipynb  regression_on_workers_compensation.md
docs/javascripts/: mathjax.js
examples/classification/: index.html
examples/quantile_regression/: index.html
examples/regression_on_workers_compensation/: index.html
gen_ref_pages/: index.html
javascripts/: mathjax.js
reference/SUMMARY/: index.html
reference/model_diagnostics/: index.html
reference/model_diagnostics/__about__/: index.html
reference/model_diagnostics/calibration/: index.html
reference/model_diagnostics/calibration/identification/: index.html
reference/model_diagnostics/calibration/plots/: index.html
reference/model_diagnostics/scoring/: index.html
reference/model_diagnostics/scoring/plots/: index.html
reference/model_diagnostics/scoring/scoring/: index.html
search/: search_index.json
src/model_diagnostics/: __about__.py  __init__.py  _config.py  perm_imp.ipynb
src/model_diagnostics/_utils/: _array.py  _binning.py  array.py  array_validation.py  binning.py  isotonic.py  partial_dependence.py  plot_helper.py
src/model_diagnostics/_utils/tests/: test_array.py  test_array_validation.py  test_binning.py  test_identification.py  test_isotonic.py  test_partial_dependence.py
src/model_diagnostics/calibration/: __init__.py  _compute.py  _identification.py  _plots.py  identification.py  plots.py
src/model_diagnostics/calibration/tests/: test_compute.py  test_identification.py  test_plots.py
src/model_diagnostics/scoring/: __init__.py  _plots.py  _scoring.py  plots.py  scoring.py
src/model_diagnostics/scoring/tests/: test_plots.py  test_scoring.py
src/model_diagnostics/tests/: __init__.py  test_config.py
src/model_diagnostics/xai/: __init__.py  _partial_dependence.py  _permutation_importance.py  permutation_importance.py  plots.py
src/model_diagnostics/xai/tests/: test_partial_dependence.py  test_permutation_importance.py  test_plots.py
