[build-system]
requires = ["hatchling >= 1.11.1"]
build-backend = "hatchling.build"

[project]
name = "model-diagnostics"
authors = [
  { name="Christian Lorentzen", email="lorentzen.ch@gmail.com" },
]
description = "Tools for diagnostics and assessment of (machine learning) models"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
    "Framework :: Hatch",
    "Topic :: Scientific/Engineering",
]
keywords = ["machine learning", "model diagnostics", "calibration"]
dependencies = [
  "matplotlib>=3.6.1",
  "numpy>=1.22",  # type annotations and method arg in quantile
  "packaging>=23.1",
  "polars>=0.17.15",
  "scikit-learn>=1.2.0",  # We rely on the set_output API.
  "scipy>=1.10",  # scipy.stats.expectile
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://lorentzenchr.github.io/model-diagnostics/"
"Source" = "https://github.com/lorentzenchr/model-diagnostics"
"Tracker" = "https://github.com/lorentzenchr/model-diagnostics/issues"

[tool]

[tool.black]
line-length = 88
target-version = ["py39"]
extend-exclude = ".hatch/*"

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [".hatch"]
select = [
  "A",  # flake8-builtins
  # "ANN",  # flake8-annotations
  # "ARG",  # flake8-unused-arguments
  "B",  # flake8-bugbear
  "BLE",  # flake8-blind-except
  "C",  # flake8-commas
  "C4",  # flake8-comprehensions
  # "C90",  # mccabe
  # "D",  # pydocstyle
  "DJ",  # flake8-django
  "DTZ",  # flake8-datetimez
  "E",  # pycodestyle
  "EM",  # flake8-errmsg
  "ERA",  # eradicate
  "EXE",  # flake8-executable
  "F",  # pyflakes
  "FBT",  # flake8-boolean-trap
  "G",  # flake8-logging-format
  "I",  # isort
  "ICN",  # flake8-import-conventions
  # "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  # "N",  # pep8-naming
  "NPY",  # NumPy-specific rules
  "PD",  # pandas-vet
  # "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",  # Pylint
  # "PLC",  # Pyling Convention
  # "PLE",  # Pyling Error
  # "PLR",  # Pyling Refactor
  # "PLW",  # Pyling Warning
  "PT",  # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "PYI",  # flake8-pyi
  "Q",  # flake8-quotes
  "RSE",  # flake8-raise
  # "RET",  # flake8-return
  "RUF",  # Ruff-specific rules
  "S",  # flake8-bandit
  "SIM",  # flake8-simplify
  "SLF",  # flake8-self
  "SIM",  # flake8-simplify
  "T10",  # flake8-debugger
  "T20",  # flake8-print
  # "TCH",  # flake8-type-checking
  "TID",  # flake8-tidy-imports
  "TRY",  # tryceratops
  "UP",  # pyupgrade
  "W",  # pycodestyle
  "YTT",  # flake8-2020
]
ignore = [
  "C901",
  "PD901",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PLR2004",
  "ERA001",
]

[tool.ruff.isort]
known-first-party = ["model_diagnostics"]

[tool.ruff.per-file-ignores]
# Tests can use assertions, and relative imports
"*/tests/*.py" = ["S101", "TID252"]

[tool.mypy]
# disallow_untyped_defs = false
# follow_imports = "normal"
ignore_missing_imports = true
plugins = "numpy.typing.mypy_plugin"
pretty = true
# show_column_numbers = true
# warn_no_return = false
# warn_unused_ignores = true

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/model_diagnostics/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.hatch",
  "/.vscode",
]

[tool.hatch.envs.default]
dependencies = [
  "pandas>=1.5",
  "pyarrow>=11.0.0",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
]

[tool.hatch.envs.default.scripts]
# Adding "-n auto" (pytest-xdist) allows parallel execution but swallows output.
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/model_diagnostics {args}"
cov-erase = "coverage erase"
no-cov = "cov --no-cov"

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs-material~=9.4.14",
  "mkdocstrings[python]>=0.24",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-literate-nav>=0.6.1",
  "mkdocs-section-index>=0.3.8",
  "mkdocs-jupyter>=0.24.6",
]
extra-dependencies = [
  "scikit-learn>=1.3.0",  # for Gamma deviance in HistGradientBoostingRegressor
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict {args}"
serve = "mkdocs serve --dev-addr localhost:8000 {args}"
ci-build = "mkdocs gh-deploy --force {args}"

[tool.hatch.envs.jupyter]
extra-dependencies = [
  "jupyterlab>=4.0.4",
  "scikit-learn>=1.3.0",
  "plotly>=5.11.0",
]

[tool.hatch.envs.jupyter.scripts]
lab = "jupyter lab"

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=22.8.0",
  "numpy>=1.22",
  "mypy>=1.4",
  "ruff==0.0.278",
]

[tool.hatch.envs.lint.scripts]
# typing = "mypy --install-types --non-interactive {args:backend/src/hatchling src/hatch tests}"
typing = [
  "python -c 'from pathlib import Path; Path(\".mypy_cache\").mkdir(parents=True, exist_ok=True)'",
  "mypy --install-types --non-interactive {args:src/model_diagnostics}"
]
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.hatch.envs.test]
# We do not want to inherit from envs.default because we explicitely want to have test
# matrix entries with minimal dependencies, e.g. without pandas or pyarrow.
# Dependencies only contain what we need for testing.
dependencies = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11"]

[tool.hatch.envs.test.overrides]
# Minimal versions (partially inherited from scikit-learn 1.2.0)
# but including pandas and pyarrow
name."py3.9".set-extra-dependencies = [
  "numpy==1.22",
  "polars==0.17.15",
  "scipy==1.10",
  "pandas==1.5.*",
  "pyarrow==11.0.*"
]
# Minimal versions without pandas and pyarrow 
name."py3.10".set-extra-dependencies = [
  "numpy==1.22",
  "polars==0.19.19",
  "scipy==1.10",
]
# latest versions, with plotly
name."py3.11".set-extra-dependencies = [
  "numpy",
  "polars",
  "scipy",
  "pandas",
  "plotly",
  "pyarrow",
]
# To check correct versions, you can run
# hatch -e test run pip freeze | grep polars
[tool.hatch.envs.test.scripts]
# versions = ["pip freeze | grep -E 'numpy|polars|scipy|pandas|pyarrow'"]
# A version of 'versions' working on all plattforms, in particular Windows.
versions = "python dev_tools/print_package_versions.py"
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/model_diagnostics --cov-append {args}"

[tool.hatch.version]
path = "src/model_diagnostics/__about__.py"

[tool.pytest.ini_options]
addopts = [
  "--doctest-modules",
  "--ignore=docs",
]
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL",
  "ELLIPSIS",
]
filterwarnings = [
  # fail on any warnings that are not explicitly matched below
  "error",
]